# PetCare-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-rag.txt
ai/: .env.example  PetCare_AI_Colab.ipynb  README.md  requirements.txt
app/: App.tsx  README.md  app.json  package-lock.json  package.json
docs/: petcare-ai-ADR.md  petcare-ai_PRD.md  petcare-ai_TDD.md  petcare-ai_UI_UX_screens.md  petcare-ai_diagnosis-certificate-samples.md  petcare-ai_project-summary.md  petcare-ai_user-input-examples.md  rag-evaluation-criteria.md  rag-integration-guide.md  rag-presentation-notion-draft.md
jewon-ai/: PetCare_AI_Colab.ipynb  pyproject.toml  일기장 정리.ipynb  진단서 정리.ipynb
jewon-ai/faiss_index/faiss_cat/: index.faiss  records.json
jewon-ai/faiss_index/faiss_dog/: meta.json  records.json
jewon-ai/petcare_ai/: __init__.py  llm.py
jewon-ai/petcare_ai/adapters/: __init__.py  clinical_data_adapter.py
jewon-ai/petcare_ai/graph/: builder.py  prompts.py  state.py
jewon-ai/petcare_ai/graph/nodes/: assessment.py  conversation_summary.py  db_context.py  document_agent.py  email_draft.py  fast_emergency_guard.py  final_safety.py  health_response.py  hospital_search.py  output_check.py  risk_double_check.py  supervisor.py
jewon-ai/petcare_ai/graph/subgraphs/: __init__.py  visit.py
jewon-ai/petcare_ai/pdf/: __init__.py  consultation_pdf.py
jewon-ai/petcare_ai/rag/: __init__.py  chunker.py  embeddings.py  normalizer.py  query_builder.py  source_validator.py  sufficiency.py
jewon-ai/petcare_ai/tests/: test_emergency_subgraph.py  test_pdf_email_output.py  test_rag_loader.py  test_rag_retrieval.py  test_rag_sufficiency.py  test_tavily_fallback.py  test_visit_subgraph.py
notebooks/: cornell_rag_walkthrough.ipynb
petcare_rag/: __init__.py  api.py  models.py  pipeline.py
rag_data/: README.md
server/: .env.example  README.md  requirements.txt
tests/: test_build_cornell_pet_corpus.py  test_cornell_rag_api.py  (+2 more)
(+324 files in other folders)
